2005-09-28  Andy Wingo  <wingo@pobox.com>

	* gst/tcp/gsttcpclientsink.c (gst_tcpclientsink_base_init):
	Actually add the pad template.
	(gst_tcpclientsink_get_type): We're a base sink. Woot, works.

	* gst/tcp/gsttcpserversrc.c: Go ahead and fix up serversrc while
	I'm at it...

	* gst/tcp/gsttcpclientsrc.c: Make interruptable -- code stolen
	from fdsrc. Get caps in create() instead of start() so it can be
	interrupted. Interruption somewhat untested.

	* gst/tcp/gsttcp.c (gst_tcp_read_buffer, gst_tcp_socket_read):
	Proper EOS handling.

2005-09-27  Andy Wingo  <wingo@pobox.com>

	* gst/tcp/gsttcpclientsrc.c: Cleaned up.

	* gst/tcp/gsttcpserversrc.c: Cleaned up.

	* gst/tcp/gsttcpclientsrc.c: Updated for new gsttcp API.

	* gst/tcp/gsttcp.h: 
	* gst/tcp/gsttcp.c (gst_tcp_read_buffer): New function, factored
	out of tcpclientsrc.c. Cancellable.
	(gst_tcp_socket_read): Made private, cancellable, with better
	diagnostics. Also the FIONREAD ioctl takes a int*, not a size_t*.
	(gst_tcp_gdp_read_buffer): Made cancellable, actually returns the
	whole buffer, and better diagnostics.
	(gst_tcp_gdp_read_caps): Same.

	* gst/sine/gstsinesrc.c (gst_sinesrc_wait): Add the base time.

2005-09-26  Andy Wingo  <wingo@pobox.com>

	* gst/sine/gstsinesrc.h:
	* gst/sine/gstsinesrc.c: Refactor, remove the table lookup code,
	change the 'sync' property to 'is-live' and implement it halfway,
	update for controller api change.

	* gst/volume/gstvolume.c (volume_transform_ip): Update for
	controller api change.

2005-09-24  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_reset):
	* gst-libs/gst/audio/gstaudiosink.c:
	(gst_audioringbuffer_class_init), (audioringbuffer_thread_func),
	(gst_audioringbuffer_stop):
	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event), (gst_base_audio_sink_render),
	(gst_base_audio_sink_change_state):
	* gst-libs/gst/audio/gstbaseaudiosink.h:
	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_stop),